--- a/MyFinalProject_210910/app/src/main/res/layout/activity_main.xml
+++ b/MyFinalProject_210910/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
             android:layout_height="match_parent">
 
             <ListView
+                android:id="@+id/appointmentListView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
