--- a/MyFinalProject_210910/app/src/main/res/layout/appointment_list_item.xml
+++ b/MyFinalProject_210910/app/src/main/res/layout/appointment_list_item.xml
@@ -12,6 +12,7 @@
         android:padding="10dp" >
 
         <TextView
+            android:id="@+id/titleTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="일정 제목"
@@ -29,11 +30,13 @@
             android:orientation="vertical" >
 
             <TextView
+                android:id="@+id/dateTimeTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="9/13 오후 3:45" />
 
             <TextView
+                android:id="@+id/placeNameTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="학원 앞" />
