--- a/MyFinalProject_210910/app/src/main/res/layout/my_custom_action_bar.xml
+++ b/MyFinalProject_210910/app/src/main/res/layout/my_custom_action_bar.xml
@@ -21,4 +21,14 @@
         android:layout_gravity="right|center_vertical"
         android:layout_marginRight="10dp" />
 
+    <ImageView
+        android:id="@+id/addBtn"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:src="@drawable/plus_icon"
+        android:layout_marginRight="10dp"
+        android:visibility="gone"
+        android:padding="5dp"
+        android:layout_gravity="right|center_vertical" />
+
 </FrameLayout>
