--- a/MyFinalProject_210910/app/src/main/res/layout/activity_edit_appointment.xml
+++ b/MyFinalProject_210910/app/src/main/res/layout/activity_edit_appointment.xml
@@ -1,102 +1,147 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <layout>
-
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="20dp"
-        tools:context=".EditAppointmentActivity">
+        tools:context=".EditAppoinmentActivity">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="약속 제목" />
-
-        <EditText
-            android:id="@+id/titleEdt"
+        <ScrollView
+            android:id="@+id/scrollView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="제목 입력"
-            android:singleLine="true" />
+            android:layout_height="match_parent">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="약속 일시"
-            android:layout_marginTop="15dp" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="horizontal" >
-
-            <TextView
-                android:id="@+id/dateTxt"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="17sp"
-                android:padding="15dp"
-                android:text="일자 설정" />
+                android:padding="20dp"
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/timeTxt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="17sp"
-                android:padding="15dp"
-                android:text="시간 설정" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="약속 제목" />
 
-        </LinearLayout>
+                <EditText
+                    android:id="@+id/titleEdt"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="제목 입력"
+                    android:singleLine="true" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="일자 / 시간 설정을 눌러서 약속 일시를 선택하세요!" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="약속 일시"
+                    android:layout_marginTop="15dp"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="약속 장소"
-            android:layout_marginTop="15dp" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:orientation="horizontal">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+                    <TextView
+                        android:id="@+id/dateTxt"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="17sp"
+                        android:padding="15dp"
+                        android:text="일자 설정" />
 
-            <EditText
-                android:id="@+id/placeSearchEdt"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:singleLine="true"
-                android:hint="약속 장소를 검색해보세요." />
+                    <TextView
+                        android:id="@+id/timeTxt"
+                        android:textSize="17sp"
+                        android:padding="15dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="시간 설정" />
 
-            <Button
-                android:id="@+id/placeSearchBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="검색" />
+                </LinearLayout>
 
-        </LinearLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="일자/시간 설정을 눌러서 약속 일시를 선택하세요!" />
 
-        <fragment
-            android:id="@+id/naverMapView"
-            android:layout_width="match_parent"
-            android:layout_height="250dp"
-            class="com.naver.maps.map.MapFragment"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="출발지"
+                    android:layout_marginTop="15dp"/>
 
-        <Button
-            android:id="@+id/okBtn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="약속 등록하기" />
+                <Spinner
+                    android:id="@+id/startPlaceSpinner"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="약속 장소"
+                    android:layout_marginTop="15dp"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <EditText
+                        android:id="@+id/placeSearchEdt"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:singleLine="true"
+                        android:hint="약속장소를 검색해보세요."/>
+
+                    <Button
+                        android:id="@+id/placeSearchBtn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="검색" />
+
+                </LinearLayout>
+
+                <!--        <LinearLayout-->
+                <!--            android:id="@+id/mapView"-->
+                <!--            android:layout_width="match_parent"-->
+                <!--            android:layout_height="200dp"-->
+                <!--            android:gravity="center"-->
+                <!--            android:orientation="vertical" />-->
+
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <fragment
+                        android:id="@+id/naverMapView"
+                        android:layout_width="match_parent"
+                        android:layout_height="250dp"
+                        class="com.naver.maps.map.MapFragment" />
+
+
+                    <TextView
+                        android:id="@+id/scrollHelpTxt"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
+
+                </FrameLayout>
+
+
+                <Button
+                    android:id="@+id/okBtn"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="약속 등록하기" />
+
+            </LinearLayout>
+
+        </ScrollView>
+
+
+
 
     </LinearLayout>
-
 </layout>
