--- a/MyFinalProject_210910/app/src/main/res/layout/activity_main.xml
+++ b/MyFinalProject_210910/app/src/main/res/layout/activity_main.xml
@@ -1,22 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".MainActivity">
-
-    <LinearLayout
+<layout>
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        tools:context=".MainActivity">
 
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/appointmentRecyclerView"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:id="@+id/appointmentRecyclerView" />
 
             <Button
                 android:id="@+id/addAppointmentBtn"
@@ -25,10 +24,9 @@
                 android:layout_gravity="right|bottom"
                 android:layout_marginRight="10dp"
                 android:layout_marginBottom="10dp"
-                android:text="일정 등록하기" />
+                android:text="약속 등록하기" />
 
         </FrameLayout>
 
     </LinearLayout>
-
 </layout>
