--- a/MyFinalProject_210910/app/src/main/res/layout/activity_my_setting.xml
+++ b/MyFinalProject_210910/app/src/main/res/layout/activity_my_setting.xml
@@ -20,7 +20,7 @@
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:src="@drawable/default_profile_icon"
-                app:civ_border_width="3dp" />
+                app:civ_border_width="2dp" />
 
             <LinearLayout
                 android:id="@+id/editNicknameLayout"
@@ -41,6 +41,7 @@
                     android:id="@+id/nicknameTxt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
                     android:text="닉네임 자리" />
 
                 <ImageView
@@ -114,6 +115,45 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="비밀번호 변경하기" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1" />
+
+
+                <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:src="@drawable/right_arrow_icon"
+                    android:padding="10dp"/>
+
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#DFDFDF" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/myPlacesLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="내 출발장소 관리" />
 
                 <TextView
                     android:layout_width="0dp"
