--- a/MyFinalProject_210910/app/src/main/res/layout/activity_sign_up.xml
+++ b/MyFinalProject_210910/app/src/main/res/layout/activity_sign_up.xml
@@ -13,22 +13,23 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="아이디" />
+            android:text="사용하실 아이디를 입력해주세요." />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal" >
+            android:orientation="horizontal">
 
             <EditText
                 android:id="@+id/emailEdt"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:hint="이메일을 입력하세요"
+                android:hint="이메일 양식"
                 android:inputType="textEmailAddress" />
 
             <Button
+                android:id="@+id/emailCheckBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="중복 확인" />
@@ -38,34 +39,43 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="비밀번호" />
+            android:layout_marginTop="10dp"
+            android:text="사용하실 비밀번호를 입력해주세요." />
 
         <EditText
             android:id="@+id/pwEdt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="비밀번호를 입력하세요" />
+            android:hint="비밀번호를 입력하세요"
+            android:inputType="textPassword"/>
+
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:text="비밀번호 재입력" />
 
         <EditText
+            android:id="@+id/pwRepeatEdt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:inputType="textPassword"
             android:hint="비밀번호를 다시 입력하세요" />
+
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="닉네임" />
+            android:layout_marginTop="10dp"
+            android:text="사용하실 닉네임을 입력하세요." />
 
         <EditText
             android:id="@+id/nicknameEdt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="사용하실 닉네임을 입력하세요" />
+            android:singleLine="true"
+            android:hint="닉네임을 넣어주세요." />
 
         <Button
             android:id="@+id/signUpBtn"
