--- a/MyFinalProject_210910/app/src/main/res/layout/appointment_list_item.xml
+++ b/MyFinalProject_210910/app/src/main/res/layout/appointment_list_item.xml
@@ -53,4 +53,9 @@
 
     </LinearLayout>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#DFDFDF" />
+
 </LinearLayout>
