--- a/MyFinalProject_210910/app/src/main/res/layout/activity_edit_appointment.xml
+++ b/MyFinalProject_210910/app/src/main/res/layout/activity_edit_appointment.xml
@@ -80,6 +80,56 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:text="참석할 친구들" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <Spinner
+                        android:id="@+id/myFriendsSpinner"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1" />
+
+                    <Button
+                        android:id="@+id/addFriendToListBtn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="참여 추가" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/friendListLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal" >
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="김국장"
+                        android:layout_marginRight="5dp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="이국장"
+                        android:layout_marginRight="5dp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="삼국장"
+                        android:layout_marginRight="5dp" />
+
+                </LinearLayout>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:text="약속 장소"
                     android:layout_marginTop="15dp"/>
 
@@ -128,7 +178,6 @@
                         android:layout_height="match_parent" />
 
                 </FrameLayout>
-
 
                 <Button
                     android:id="@+id/okBtn"
