--- a/MyFinalProject_210910/app/src/main/res/layout/activity_view_appointment_detail.xml
+++ b/MyFinalProject_210910/app/src/main/res/layout/activity_view_appointment_detail.xml
@@ -113,6 +113,12 @@
 
                     </LinearLayout>
 
+                    <Button
+                        android:id="@+id/arrivalBtn"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="도착!" />
+
                 </LinearLayout>
             </LinearLayout>
 
