--- a/MyFinalProject_210910/app/src/main/res/layout/activity_view_appointment_detail.xml
+++ b/MyFinalProject_210910/app/src/main/res/layout/activity_view_appointment_detail.xml
@@ -31,59 +31,61 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:gravity="center_vertical">
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal">
 
                         <TextView
                             android:id="@+id/titleTxt"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="약속 제목 자리"
+                            android:text="약속제목 자리"
                             android:textColor="@color/black"
-                            android:textSize="20sp" />
+                            android:textSize="20sp"/>
 
                         <TextView
                             android:id="@+id/invitedFriendsCountTxt"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="(참여 인원 : 4명)"
+                            android:text="(참여인원 : 4명)"
                             android:layout_marginLeft="5dp"
-                            android:textSize="16sp" />
+                            android:textSize="16sp"/>
+
 
                     </LinearLayout>
+
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
                         android:gravity="center_vertical"
-                        android:layout_marginTop="10dp">
+                        android:layout_marginTop="10dp"
+                        android:orientation="horizontal">
 
                         <ImageView
                             android:layout_width="25dp"
                             android:layout_height="25dp"
-                            android:src="@drawable/location_icon"/>
+                            android:src="@drawable/location_icon" />
 
                         <TextView
                             android:id="@+id/placeTxt"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textSize="16sp"
-                            android:text="장소 이름" />
+                            android:text="장소이름" />
 
                     </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
                         android:gravity="center_vertical"
-                        android:layout_marginTop="10dp">
+                        android:layout_marginTop="10dp"
+                        android:orientation="horizontal">
 
                         <ImageView
                             android:layout_width="25dp"
                             android:layout_height="25dp"
-                            android:src="@drawable/time_icon"/>
+                            android:src="@drawable/time_icon" />
 
                         <TextView
                             android:id="@+id/timeTxt"
@@ -94,13 +96,48 @@
 
                     </LinearLayout>
 
-                    <TextView
-                        android:layout_width="wrap_content"
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="친구 목록"
-                        android:textSize="18sp"
-                        android:textColor="@color/black"
-                        android:layout_marginTop="20dp" />
+                        android:layout_marginTop="20dp"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="친구 목록"
+                            android:textSize="18sp"
+                            android:textColor="@color/black"/>
+
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1" />
+
+                        <LinearLayout
+                            android:id="@+id/refreshBtn"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center_vertical"
+                            android:padding="5dp"
+                            android:orientation="horizontal">
+
+                            <ImageView
+                                android:layout_width="20dp"
+                                android:layout_height="20dp"
+                                android:padding="5dp"
+                                android:src="@drawable/refresh_icon" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="새로 고침" />
+
+                        </LinearLayout>
+
+                    </LinearLayout>
+
 
                     <LinearLayout
                         android:id="@+id/invitedFriendsLayout"
@@ -109,20 +146,20 @@
                         android:orientation="vertical"
                         android:layout_marginTop="10dp">
 
-
-
                     </LinearLayout>
 
                     <Button
                         android:id="@+id/arrivalBtn"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="도착!" />
+                        android:text="도착 인증하기" />
 
                 </LinearLayout>
+
             </LinearLayout>
 
         </ScrollView>
+
 
     </LinearLayout>
 </layout>
